# agentic-systems-engineering

./: .env.example  .gitignore  README.md  pyproject.toml
docs/concepts/: rag-basics.md
projects/01-foundations/raw-rag/: notes.md  pyproject.toml
projects/01-foundations/raw-rag/app/: ingest.py
projects/01-foundations/raw-rag/data/: knowledge.txt
