[project]
name = "raw-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Gilbert Cheruiyot",email = "gilbertofke@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu (>=1.13.2,<2.0.0) ; python_version >= \"3.11\" and python_version < \"3.15\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
